Compiler/fasto/tests/arithmicTest.out
-10
10
10
25
0
-25
25
0
130
5
-5
1
0
7
Error: Division by zero at line 23